--- a/frontend/json-editor/src/styles.css
+++ b/frontend/json-editor/src/styles.css
@@ -2,3 +2,35 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.button {
+  height: 40px;
+  padding: 0 25px;
+  margin-left: 10px;
+  line-height: 40px;
+  border-radius: 5px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  display: inline-block;
+}
+.button.primary{
+  background-color: #1890ff;
+  color: #fff;
+}
+.button.default{
+  background-color: #fff;
+  color: rgba(0,0,0,0.65);
+  border: 1px solid #aaa;
+}
+
+.button.primary:hover{
+  background-color: rgb(64,169,255);
+}
+.button.primary:active{
+  background-color: rgb(9,109,217)
+}
+.button.default:hover{
+  color: rgb(64,169,255);
+  border: 1px solid rgb(64,169,255);
+}
